# Kataglyphis-NativeInferencePlugin

./: .gitignore  .gitmodules  .metadata  README.md  pubspec.yaml
.dart_tool/: package_config.json  package_graph.json
.dart_tool/extension_discovery/: vs_code.json
android/: build.gradle  consumer-rules.pro  settings.gradle
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/jni/: Android.mk
android/app/src/main/kotlin/com/example/kataglyphis_native_inference/: MainActivity.kt
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: CMakeLists.txt  gstreamer_native.cpp
android/src/main/cpp/cmake/: FindGStreamer.cmake
android/src/main/java/org/freedesktop/gstreamer/: GStreamer.java
android/src/main/java/org/freedesktop/gstreamer/androidmedia/: GstAhcCallback.java  GstAhsCallback.java  GstAmcOnFrameAvailableListener.java
android/src/main/kotlin/com/example/kataglyphis_native_inference/: GStreamerController.kt  KataglyphisNativeInferencePlugin.kt
android/src/test/kotlin/com/example/kataglyphis_native_inference/: KataglyphisNativeInferencePluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/kataglyphis_native_inference_example/: MainActivity.kt
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/linux/runner/: my_application.cc
example/test/: widget_test.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: kataglyphis_native_inference.dart  kataglyphis_native_inference_method_channel.dart  kataglyphis_native_inference_platform_interface.dart
linux/: CMakeLists.txt  kataglyphis_native_inference_plugin.cc  kataglyphis_native_inference_plugin_private.h  my_texture.cc  my_texture.h  my_texture.ixx
linux/archive/: my_texture_backup.cc  my_texture_backup.h
linux/include/kataglyphis_native_inference/: kataglyphis_native_inference_plugin.h
linux/test/: kataglyphis_native_inference_plugin_test.cc
test/: kataglyphis_native_inference_method_channel_test.dart  kataglyphis_native_inference_test.dart  widget_test.dart
windows/: CMakeLists.txt  kataglyphis_native_inference_plugin.cpp  kataglyphis_native_inference_plugin.h  kataglyphis_native_inference_plugin_c_api.cpp  kataglyphis_texture.cpp  kataglyphis_texture.h
windows/include/kataglyphis_native_inference/: kataglyphis_native_inference_plugin_c_api.h
windows/test/: kataglyphis_native_inference_plugin_test.cpp
